switch to conda for python, use cache for the environment

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -12,40 +12,74 @@ jobs:
         python-version: [ '3.9' ]
       max-parallel: 5
 
+    defaults:
+      run:
+        # Set up the default shell. This is needed for the Conda
+        shell: bash -l {0}
+
     env:
       GIT_LFS_SKIP_SMUDGE: 1
 
     steps:
+      # ------------------------------------------------------------------------
+      # Checkout the branch from the github repository that triggered the action
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+      # ------------------------------------------------------------------------
 
-      - name: Create LFS file list
+      # ----------------------------------------
+      # Setting up the caching for the LFS files
+      - name: Get IDs of the files registered in the LFS
         run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
 
       - name: Restore LFS cache
         uses: actions/cache@v2
+        env:
+          # Increase this value to reset the cache manually
+          LFS_CACHE_VERSION: 1
         id: lfs-cache
         with:
           path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v${{ env.LFS_CACHE_VERSION }}
 
-      - name: Git LFS Pull
+      - name: Pull the working copies of the files registered in the LFS
         run: git lfs pull
+      # ----------------------------------------
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      # --------------------------------------------------
+      # Setting up Python using a cached Conda environment
+      - name: Restore Conda cache
+        uses: actions/cache@v2
+        env:
+          # Increase this value to reset the cache manually
+          CONDA_CACHE_VERSION: 1
+        id: conda-cache
         with:
-          python-version: ${{ matrix.python-version }}
+          path: ~/conda_pkgs_dir
+          key: ${{ runner.os }}-conda-${{ matrix.python-version }}-${{ hashFiles('environment.yml') }}-v${{ env.CONDA_CACHE_VERSION }}
 
-      - name: Install dependencies
-        run: |
-          pip install numpy
+      - name: Set up Conda with Python ${{ matrix.python-version }}
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: test_cached_lfs_with_gh_actions
+          environment-file: environment.yml
+          channel-priority: strict
+          use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
+      # --------------------------------------------------
 
+      # ------------------------
+      # Decompress the test data
       - name: Test gunzipping the data
         run: |
           cd data
           gunzip --keep X.csv.gz
           cd ..
+      # ------------------------
+
+      # -----------------
+      # Run the unittests
       - name: Run unittesting
-        run: |
-          python -m unittest unittests_data_reader.py
+        run: python -m unittest unittests_data_reader.py
+      # -----------------
