--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,10 +1,8 @@
 name: Test unittests with LFS caching
 
 on:
-  push:
-    branches: [ main, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
   build-linux:
